使用 Colaboratory 创建

--- a/Model_Construction.ipynb
+++ b/Model_Construction.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "14p4yjvv0ykXD7Vlo4okBZB4RIYkCF0Oz",
-      "authorship_tag": "ABX9TyPbknNB43CgkFU+jW+VO9Nw",
+      "authorship_tag": "ABX9TyMmcjMdcwoVtkKwJ8mDer4V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2004,35 +2004,19 @@
       "metadata": {
         "id": "m6MIKTFgakPz",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 229
-        },
-        "outputId": "28af75e1-2cca-4a0a-acf4-e1bac6669d89"
+        "colab": {}
       },
       "source": [
         "# Define error metrics\n",
         "def mab(y, y_pred):\n",
         "  return mean_absolute_error(y, y_pred)\n",
         "\n",
-        "def cv_mab(model, X=X):\n",
-        "  mab = -cross_val_score(model, X, train_labels, scoring=\"neg_mean_absolute_error\", cv=kf)\n",
+        "def cv_mab(model, X):\n",
+        "  mab = -cross_val_score(model, X, train_label, scoring=\"neg_mean_absolute_error\", cv=kf)\n",
         "  return (mab)"
       ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-7be2236d6c1d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmean_absolute_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mcv_mab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mmab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mcross_val_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"neg_mean_absolute_error\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2111,6 +2095,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "f5bJOo6qbdKg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scores = {}\n",
+        "score = cv_mab(lightgbm, train_data)\n",
+        "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+        "scores['lgb'] = (score.mean(), score.std())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e8mgmPBperAE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atHE6wyieFz_",
         "colab_type": "code",
         "colab": {}
       },
