使用 Colaboratory 创建

--- a/Model_Construction.ipynb
+++ b/Model_Construction.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "14p4yjvv0ykXD7Vlo4okBZB4RIYkCF0Oz",
-      "authorship_tag": "ABX9TyMmcjMdcwoVtkKwJ8mDer4V",
+      "authorship_tag": "ABX9TyNl3T4UCxb69+MPwQhfCWSH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2019,6 +2019,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qM0Vs7EVfvEW",
+        "colab_type": "text"
+      },
+      "source": [
+        "构建模型"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vvV4DyxlZKyp",
@@ -2064,6 +2074,7 @@
         "# Support Vector Regressor\n",
         "svr = make_pipeline(RobustScaler(), SVR(C=20, epsilon=0.008, gamma=0.0003))\n",
         "\n",
+        "# 树模型无需归一化\n",
         "# Gradient Boosting Regressor\n",
         "gbr = GradientBoostingRegressor(n_estimators=6000,\n",
         "                learning_rate=0.01,\n",
@@ -2092,15 +2103,122 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bC4r3cB8f3YU",
+        "colab_type": "text"
+      },
+      "source": [
+        "对每一个模型执行交叉验证"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "f5bJOo6qbdKg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "c06ea94f-ca36-4b06-e967-2fcac837e778"
+      },
+      "source": [
+        "\n",
+        "scores = {}\n",
+        "score = cv_mab(lightgbm, train_data)\n",
+        "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+        "scores['lgb'] = (score.mean(), score.std())"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "lightgbm: 0.1528 (0.0011)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9jPm4rJze-QN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "390e3051-654e-4cce-f7b1-e70c32ecdd3a"
+      },
+      "source": [
+        "scores = {}\n",
+        "score = cv_mab(xgboost, train_data)\n",
+        "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+        "scores['lgb'] = (score.mean(), score.std())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+            "  if getattr(data, 'base', None) is not None and \\\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "[12:13:49] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VqX1PWl4fE5T",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "scores = {}\n",
-        "score = cv_mab(lightgbm, train_data)\n",
+        "score = cv_mab(svr, train_data)\n",
+        "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+        "scores['lgb'] = (score.mean(), score.std())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tzazcWClfE0V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scores = {}\n",
+        "score = cv_mab(ridge, train_data)\n",
+        "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+        "scores['lgb'] = (score.mean(), score.std())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "phNDHGoxfErX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scores = {}\n",
+        "score = cv_mab(rf, train_data)\n",
         "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
         "scores['lgb'] = (score.mean(), score.std())"
       ],
@@ -2115,7 +2233,34 @@
         "colab": {}
       },
       "source": [
-        ""
+        "scores = {}\n",
+        "score = cv_mab(gbr, train_data)\n",
+        "print(\"lightgbm: {:.4f} ({:.4f})\".format(score.mean(), score.std()))\n",
+        "scores['lgb'] = (score.mean(), score.std())"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nj_KAtQ2gR61",
+        "colab_type": "text"
+      },
+      "source": [
+        "训练模型"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atHE6wyieFz_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 堆叠回归器\n",
+        "stack_gen_model = stack_gen.fit(train_data.values, train_label.values))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2123,7 +2268,149 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "atHE6wyieFz_",
+        "id": "7YOmESQQgUO_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lgb_model_full_data = lightgbm.fit(train_data, train_label)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nf_-XN2DgUGq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "xgb_model_full_data = xgboost.fit(train_data, train_label)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KWclfQP-gUED",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "svr_model_full_data = svr.fit(train_data, train_label)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e-kTn1HQgUBV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ridge_model_full_data = ridge.fit(train_data, train_label)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WGJ6o3nMgT75",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rf_model_full_data = rf.fit(train_data, train_label)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XgKqWp89gTxm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gbr_model_full_data = gbr.fit(train_data, train_label)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PunmrdfQg4BA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 堆叠模型\n",
+        "def blended_predictions(X):\n",
+        "  return ((0.1 * ridge_model_full_data.predict(X)) + \\\n",
+        "      (0.2 * svr_model_full_data.predict(X)) + \\\n",
+        "      (0.1 * gbr_model_full_data.predict(X)) + \\\n",
+        "      (0.1 * xgb_model_full_data.predict(X)) + \\\n",
+        "      (0.1 * lgb_model_full_data.predict(X)) + \\\n",
+        "      (0.05 * rf_model_full_data.predict(X)) + \\\n",
+        "      (0.35 * stack_gen_model.predict(np.array(X))))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bcxUMx84g35e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "blended_score = mab(train_label, blended_predictions(X))\n",
+        "scores['blended'] = (blended_score, 0)\n",
+        "print('MABE score on train data:')\n",
+        "print(blended_score)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ReUHyF_Fg32T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 绘制每个模型的预测误差\n",
+        "fig = plt.figure(figsize=(24, 12))\n",
+        "\n",
+        "ax = sns.pointplot(x=list(scores.keys()), y=[score for score, _ in scores.values()], markers=['o'], linestyles=['-'])\n",
+        "for i, score in enumerate(scores.values()):\n",
+        "    ax.text(i, score[0] + 0.002, '{:.6f}'.format(score[0]), horizontalalignment='left', size='large', color='black', weight='semibold')\n",
+        "\n",
+        "plt.ylabel('Score (MABE)', size=20, labelpad=12.5)\n",
+        "plt.xlabel('Model', size=20, labelpad=12.5)\n",
+        "plt.tick_params(axis='x', labelsize=13.5)\n",
+        "plt.tick_params(axis='y', labelsize=12.5)\n",
+        "\n",
+        "plt.title('Scores of Models', size=20)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3DsJfzqLhb-3",
         "colab_type": "code",
         "colab": {}
       },
